hphp/hack/test/typecheck/classname/primitive.php.exp
File "primitive.php", line 3, characters 22-24:
Not a valid class name (Typing[4148])
