hphp/hack/test/typecheck/classname/primitive.php
<?hh

function f(classname<int> $x) {}
